# random_eval_bot

./: .gitignore  .gitmodules  CMakeLists.txt  abdada_search.h  abdada_tt.h  chess.hpp  compile_time_constants.h  locking_tt.h  main.cpp  perft.h  perft_tt.h  sequential_search.h  simple_concurrent_search.h  simplified_abdada.h  transposition_table.h  uci.h
evaluation/: Evaluation.txt
evaluation/baseline_testing/raw_data/: pos1_16384_abdada_d10.txt  pos1_16384_lazy_d10.txt
evaluation/defer_depth_tuning/raw_data/: pos1_16384_abdada_d10_dd1.txt  pos1_16384_abdada_d10_dd2.txt  pos1_16384_simple-abdada_d10_dd1.txt  pos1_16384_simple-abdada_d10_dd2.txt
evaluation/different_evaluation/raw_data/: pos1_16384_abdada_d9.txt  pos1_16384_lazy_d9.txt  pos1_16384_simple-abdada_d9.txt
evaluation/different_positions/raw_data/: pos1_16384_simple-abdada_d10.txt  pos2_16384_abdada_d7.txt  pos2_16384_lazy_d7.txt  pos2_16384_simple-abdada_d7.txt  pos3_16384_abdada_d12.txt  pos3_16384_lazy_d12.txt  pos3_16384_simple-abdada_d12.txt
evaluation/limited_memory/raw_data/: pos1_1024_abdada_d10.txt  pos1_1024_lazy_d10.txt  pos1_1024_simple-abdada_d10.txt  pos1_64_abdada_d10.txt  pos1_64_lazy_d10.txt  pos1_64_simple-abdada_d10.txt
evaluation/scripts/: compare_algorithms_nps.R  compare_algorithms_time.R  compare_defer_depth_nps.R  compare_defer_depth_time.R  search_overhead.R  speedup_nps.R  speedup_time.R
